syntax = "proto3";

option csharp_namespace = "GrpcServices";

package employee;

service EmployeeService {
  rpc SearchEmployees (stream EmployeeRequest) returns (stream EmployeeReply);
}

message EmployeeRequest {
  string Name = 1;
}

message EmployeeReply {
  string Employee = 1;
}
